--- a/.env
+++ b/.env
@@ -4,4 +4,4 @@
 # Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
-DATABASE_URL="postgresql://postgres:KzyiogfkUNmqEFoAOmGuzAjlYpNqXFcW@postgres.railway.internal:5432/railway"
+DATABASE_URL="postgresql://postgres:jrfwviPthcmyESyvZjycHjJolDcyJySE@autorack.proxy.rlwy.net:35975/railway"
