--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@prisma/client": "^5.22.0",
     "next": "14.2.17",
     "prisma": "^5.22.0",
     "react": "^18",
@@ -21,6 +22,8 @@
     "eslint": "^8",
     "eslint-config-next": "14.2.17",
     "postcss": "^8",
+    "prettier": "^3.3.3",
+    "prettier-plugin-tailwindcss": "^0.6.8",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
   }
