--- a/.gitignore
+++ b/.gitignore
@@ -1,24 +1,40 @@
+# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
+
+# dependencies
 /node_modules
 /.pnp
-.pnp.js
-.yarn/install-state.gz
+.pnp.*
+.yarn/*
+!.yarn/patches
+!.yarn/plugins
+!.yarn/releases
+!.yarn/versions
+
+# testing
 /coverage
-.env
-env
-.env.local
+
+# next.js
 /.next/
 /out/
+
+# production
 /build
+
+# misc
 .DS_Store
 *.pem
 
+# debug
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
-.env*.local
+# env files (can opt-in for commiting if needed)
+.env*
 
+# vercel
 .vercel
 
+# typescript
 *.tsbuildinfo
 next-env.d.ts
